# bnfo_template_test

./: .gitignore  README.md  pyproject.toml
data/: README.md
figures/: README.md
notebooks/: README.md  Test_notebook.ipynb
src/: README.md  paths.py
