[project]
name = "bnfo-analysis-template"
version = "0.1.0"
description = "My template for bioinformatics analyses in the forsberg lab"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter-core>=5.9.1",
    "jupyterlab>=4.5.2",
    "pyrootutils>=1.0.4",
]
